@@ -1,3 +1,7 @@
+2017-08-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml (before_install): Use https for curl fetch
+
 2016-08-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/rmsfact.R (rmsfact): Support ind argument
